tests/src/errors/methodDestructure/map.spec.2.ts
{
	const arr = new Map([[1, 2], [3, 4]]);
	// tslint:disable
	// prettier-ignore
	const b = arr["isEmpty"];
	// tslint:enable
}
export {};
